--- a/style.css
+++ b/style.css
@@ -87,3 +87,15 @@ img.trolley {
     z-index: 2;
     transition: left 0.1s linear, top 0.1s linear;
 }
+
+/* Two guys image */
+img.two-guys {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 20vw;
+    height: auto;
+    object-fit: contain;
+    pointer-events: none;
+    z-index: 3;
+}
